Style fix for overlapping title and p

--- a/src/components/SectionCollapsible/SectionCollapsible.module.scss
+++ b/src/components/SectionCollapsible/SectionCollapsible.module.scss
@@ -68,8 +68,8 @@
   @include mq-phone() {
     text-indent: 0;
   }
-  text-indent: 18rem;
-  margin-top: -3rem;
+  text-indent: 16rem;
+  margin-top: 1rem;
   margin-bottom: 3rem;
 }
 
